<resources>
    <string name="app_name">WorkNopSys Mobile</string>
    <string name="loginPasswordHint">Password</string>
    <string name="loginPersonal_numberHint">Personal Number</string>
    <string name="loginLoginBtnText">LOGIN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hours_review_activity">Hours Review</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_project">Create Project</string>
    <string name="description">Description :</string>
    <string name="create_customer">Create Customer</string>
    <string name="salutation_prompt">Salutation</string>
    <string name="pick_date">PICK DATE</string>
    <string name="next">NEXT</string>
    <string name="my_customers">My Customers</string>
    <string name="refresh">Refresh</string>
    <string name="share_whatsapp">Download the Worknopsys app to seamlessly manage your work.For more details, visit http://worknopsys.ml:5000/ </string>
    <string name="create_working_orders">Create Working Order</string>
    <string name="preference_file_key">com.example.ravivats.worknopsysmobile.preference_file_key</string>
    <string name="shared_pref_QR_code_list_key">com.example.ravivats.worknopsysmobile.shared_pref_QR_code_list_key</string>
    <string name="shared_pref_QR_code_string_list_key">com.example.ravivats.worknopsysmobile.shared_pref_QR_code_string_list_key</string>
    <string name="to_time">TO</string>
    <string name="from_time">FROM</string>
    <string name="submit">SUBMIT</string>
    <string name="default_timing">00:00</string>
    <string name="set_filter">Set Filter:</string>
    <string name="enter_complaint_details">Enter Complaint Details:</string>
    <string name="create_complaint">Create Complaint</string>
    <string name="project_name">Project Name :</string>
    <string name="task_name">Task Name :</string>
    <string name="customer_name">Customer Name :</string>
    <string-array name="salutation_array">
        <item>Mr</item>
        <item>Dr</item>
        <item>Mrs</item>
        <item>Ms</item>
    </string-array>
    <string-array name="facing_since_array">
        <item>1–20 days</item>
        <item>21–50 days</item>
        <item>50+ days</item>
    </string-array>
    <string-array name="category_array">
        <item>Medical</item>
        <item>Transport</item>
        <item>Resources</item>
        <item>Payment</item>
    </string-array>
    <string-array name="no_of_people_array">
        <item>1–20 people</item>
        <item>21–50 people</item>
        <item>50+ people</item>
    </string-array>

    <string-array name="project_status_array">
        <item>In process</item>
        <item>Completed</item>
    </string-array>
    <string name="title_activity_qrcode_info">QRCodeInfoActivity</string>
    <string name="scannedContents">Scanned contents:</string>
    <string name="qr_code_scanned_results">QR Code Scanned Results</string>
    <string name="qr_code_scanned_resources">Scanned Resources</string>
    <string name="scanned_resource_list">Scanned Resources:</string>
    <string name="image_1_description">Image 1 Description</string>
    <string name="image_2_description">Image 2 Description</string>
    <string name="image_3_description">Image 3 Description</string>
</resources>
