<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ravivats.worknopsysmobile.LoginActivity">

    <EditText
        android:hint="@string/loginPersonal_numberHint"
        android:id="@+id/loginPersonalNoEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/colorPrimaryDark"
        android:inputType="number"
        />
    <EditText
        android:inputType="textPassword"
        android:hint="@string/loginPasswordHint"
        android:id="@+id/loginPasswordEditText"
        android:textColorHint="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginPersonalNoEditText"
        android:layout_marginTop="10dp"/>
    <Switch
        android:layout_width="wrap_content"
        android:id="@+id/loginLocationSwitch"
        android:layout_height="wrap_content"
        android:text="Enable Location"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginPasswordEditText"
        android:switchPadding="40dp"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/loginLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginLocationSwitch"
        android:layout_marginTop="10dp"
        android:text="@string/loginLoginBtnText"/>
</RelativeLayout>
