<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ravivats.worknopsysmobile.WorkingOrders.MyWorkingOrderDetails">

    <TextView
        android:id="@+id/edit_wo_editText_sDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/edit_wo_editText_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_wo_editText_sDate"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/edit_wo_spinner_pID_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_wo_editText_address"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/project_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/edit_wo_spinner_pID"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_wo_editText_address"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/edit_wo_spinner_tID_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_wo_spinner_pID"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/task_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/edit_wo_spinner_tID"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_wo_spinner_pID"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:dropDownWidth="wrap_content"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/edit_wo_spinner_cID_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_wo_spinner_tID"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/customer_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/edit_wo_spinner_cID"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_wo_spinner_tID"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/edit_wo_editText_resources"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_wo_spinner_cID"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/edit_wo_timings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_wo_editText_resources"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Timings" />

    <Button
        android:id="@+id/edit_wo_resources_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_wo_timings_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Resources" />
</RelativeLayout>
