<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ravivats.worknopsysmobile.Others.CreateComplaint">

    <TextView
        android:id="@+id/cc_desc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/enter_complaint_details"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/cc_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cc_desc_label"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="Title" />

    <EditText
        android:id="@+id/cc_title_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/cc_desc_label"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:ems="12"
        android:hint="Complaint Title"
        android:inputType="text"
        android:textColorHint="@color/colorAccent"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/cc_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cc_title_edit_text"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="Description" />

    <EditText
        android:id="@+id/cc_description_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/cc_title_edit_text"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:ems="12"
        android:hint="Complaint Description"
        android:inputType="text"
        android:textColorHint="@color/colorAccent"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/cc_category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cc_description_edit_text"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="Category" />

    <Spinner
        android:id="@+id/cc_category_spinner"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/cc_description_edit_text"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:dropDownWidth="wrap_content"
        android:prompt="@string/salutation_prompt" />

    <TextView
        android:id="@+id/cc_number_of_people_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cc_category_spinner"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="No. of people" />

    <Spinner
        android:id="@+id/cc_number_of_people_spinner"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/cc_category_spinner"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:dropDownWidth="wrap_content"
        android:prompt="@string/salutation_prompt" />

    <TextView
        android:id="@+id/cc_facing_since_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cc_number_of_people_spinner"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="Facing since" />

    <Spinner
        android:id="@+id/cc_facing_since_spinner"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/cc_number_of_people_spinner"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:dropDownWidth="wrap_content"
        android:prompt="@string/salutation_prompt" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cc_facing_since_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/create_complaint" />

</RelativeLayout>
