<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_create_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.example.ravivats.worknopsysmobile.Customer.CreateCustomer">

                <TextView
                    android:id="@+id/cp_customers_desc_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/description"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cp_customers_cust_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_desc_label"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="18dp"
                    android:text="Customer Name" />

                <EditText
                    android:id="@+id/cp_customers_cust_name_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_desc_label"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="15dp"
                    android:ems="8"
                    android:hint="Customer Name"
                    android:inputType="text"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/cp_customers_cust_debno_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_cust_name_label"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="18dp"
                    android:text="Debitor Number" />

                <EditText
                    android:id="@+id/cp_customers_cust_debno_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_cust_name_label"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="15dp"
                    android:ems="8"
                    android:hint="Debitor Number"
                    android:inputType="text"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/cp_customers_salutation_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_cust_debno_label"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="18dp"
                    android:text="Salutation" />

                <Spinner
                    android:id="@+id/cp_customers_salutation_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_cust_debno_label"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="20dp"
                    android:dropDownWidth="wrap_content"
                    android:prompt="@string/salutation_prompt" />

                <TextView
                    android:id="@+id/cp_customers_phone_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_salutation_label"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="18dp"
                    android:text="Phone" />

                <EditText
                    android:id="@+id/cp_customers_phone_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_salutation_label"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="15dp"
                    android:ems="8"
                    android:hint="Phone number"
                    android:inputType="number"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/cp_customers_fax_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_phone_label"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="18dp"
                    android:text="Fax " />

                <EditText
                    android:id="@+id/cp_customers_fax_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_phone_label"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="15dp"
                    android:ems="8"
                    android:hint="Fax"
                    android:inputType="number"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/cp_customers_email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_fax_label"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="18dp"
                    android:text="Email" />

                <EditText
                    android:id="@+id/cp_customers_email_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_fax_label"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="15dp"
                    android:ems="8"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/cp_customers_website_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_email_label"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="18dp"
                    android:text="Website" />

                <EditText
                    android:id="@+id/cp_customers_website_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_email_label"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="15dp"
                    android:ems="8"
                    android:hint="Website"
                    android:inputType="text"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/cp_customers_location_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_website_label"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="18dp"
                    android:text="Location :"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cp_customers_address_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_location_label"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="18dp"
                    android:text="Address" />

                <EditText
                    android:id="@+id/cp_customers_address_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_location_label"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="15dp"
                    android:ems="8"
                    android:hint="Address"
                    android:inputType="text"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/cp_customers_city_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_address_label"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="18dp"
                    android:text="City" />

                <EditText
                    android:id="@+id/cp_customers_city_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_address_label"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="15dp"
                    android:ems="8"
                    android:hint="City"
                    android:inputType="text"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/cp_customers_zip_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_city_label"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="18dp"
                    android:text="Zip" />

                <EditText
                    android:id="@+id/cp_customers_zip_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_city_label"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="15dp"
                    android:ems="8"
                    android:hint="Zip"
                    android:inputType="number"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/cp_customers_ccode_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_zip_label"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="18dp"
                    android:text="Country Code" />

                <EditText
                    android:id="@+id/cp_customers_ccode_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_zip_label"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="15dp"
                    android:ems="8"
                    android:hint="Country Code"
                    android:inputType="number"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="16dp" />


                <Button
                    android:id="@+id/cp_customers_nxt_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cp_customers_ccode_label"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/next" />

            </RelativeLayout>
        </ScrollView>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main2"
        app:menu="@menu/activity_main2_drawer" />

</android.support.v4.widget.DrawerLayout>